--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+multiome_palmitate/
+multiome_stimulated_islet/
+multiome_stimulated_sc/
+tutorial/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
