--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-multiome_palmitate/
-multiome_stimulated_islet/
-multiome_stimulated_sc/
-tutorial/
+results/
 
 
 # Byte-compiled / optimized / DLL files
